// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReadItem /> should render when [selected=false] 1`] = `
<ReadItem__StyledReadItem
  active={false}
  onClick={[Function]}
>
  <ReadItem__ReadTitle>
    <ReadItem__ReadIcon>
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="file"
        pullRight={false}
      />
    </ReadItem__ReadIcon>
    <div>
      <strong>
        bar
      </strong>
      <div>
        0.0B
      </div>
    </div>
  </ReadItem__ReadTitle>
  <ReadOrientation
    index={0}
    selected={false}
  />
</ReadItem__StyledReadItem>
`;

exports[`<ReadItem /> should render when [selected=true] 1`] = `
<ReadItem__StyledReadItem
  active={true}
  onClick={[Function]}
>
  <ReadItem__ReadTitle>
    <ReadItem__ReadIcon>
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="file"
        pullRight={false}
      />
    </ReadItem__ReadIcon>
    <div>
      <strong>
        bar
      </strong>
      <div>
        0.0B
      </div>
    </div>
  </ReadItem__ReadTitle>
  <ReadOrientation
    index={0}
    selected={true}
  />
</ReadItem__StyledReadItem>
`;

exports[`<ReadOrientation /> should render when [index=0] 1`] = `
<ReadItem__StyledReadOrientation>
  LEFT
</ReadItem__StyledReadOrientation>
`;

exports[`<ReadOrientation /> should render when [index=1] 1`] = `
<ReadItem__StyledReadOrientation>
  RIGHT
</ReadItem__StyledReadOrientation>
`;

exports[`<ReadOrientation /> should render when [selected=false] 1`] = `""`;

exports[`<ReadOrientation /> should render when [selected=true] 1`] = `
<ReadItem__StyledReadOrientation>
  LEFT
</ReadItem__StyledReadOrientation>
`;
